# cruz-web

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
cmake-modules/: Macros.cmake
extlibs/: .gitignore  install.bat
src/: CMakeLists.txt  CMakeProject1.cpp  TestClass1.h
